Lightning-2/secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-10-22T11:18:02Z"
  labels:
    run: secure-pod
  name: secure-pod
  namespace: default
  resourceVersion: "5222"
  uid: 42ccb63f-7990-4ad3-91e1-31386604977a
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: secure-pod
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-r869h
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: controlplane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-r869h
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-10-22T11:18:02Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-10-22T11:18:10Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-10-22T11:18:10Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-10-22T11:18:02Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://937daba80f1c4f8555fa793cca5c551725662480d90706488de8bbe7c4378804
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:b4af4f8b6470febf45dc10f564551af682a802eda1743055a7dfc8332dffa595
    lastState: {}
    name: secure-pod
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-10-22T11:18:10Z"
  hostIP: 192.13.211.9
  phase: Running
  podIP: 10.244.0.8
  podIPs:
  - ip: 10.244.0.8
  qosClass: BestEffort
  startTime: "2023-10-22T11:18:02Z"
